--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@
   margin:0px;
   padding:0px;
   box-sizing:border-box;
-  font-size:10px;
   font-family:'Inter';
   color:#ffff;
+  font-size:16px;
 }
 
 html{
@@ -21,37 +21,83 @@ html{
 
 body{
   background-attachment:fixed;
-  display:flex;
-  justify-content:center;
-  align-items:center;
   background-image:url('https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/c1c7a7b6-f3e5-4f95-9ecf-6684140f8ec8/d9h59uo-644214f9-0c1b-441f-8b9e-c30661e9b507.png');
   background-position:center;
   background-repeat:no-repeat;
   background-size:cover;
+  overflow:hidden;
+}
+
+#section01{
+  height:100vh;
+  width:100vw;
+  max-width:100vw;
+  padding:5vh 10vw;
+  display:grid;
+  grid-template-rows:2fr 2fr 1fr;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.30) 100%);
 }
 
 #title{
-  text-align:center;
-  font-family: 'Amatic SC', cursive;
-  text-shadow:4px 4px #33102D;
+  font-family: 'Amatic SC', sans-serif;
+  font-size:20vmin;
+  color:#33102D;
+  text-shadow:0.5vmin 0.5vmin #EEC3A5;
 }
 
 #description {
   font-family: 'Dosis', sans-serif;
-  text-align:center;
-  color:#33102D;
+  color:#ffff;
+  font-size:5vmin;
+  text-shadow:#33102D 0.4vmin 0.4vmin;
   font-weight:bold;
 }
 
+#anchor{
+  display:flex;
+  justify-content:center;
+  align-items:flex-end;
+}
+
+span{
+  width:50px;
+  height:50px;
+  border:#ffff 1px solid;
+  border-radius:100%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+svg{
+  fill:#ffff;
+  animation-duration:2s;
+  animation-iteration-count:infinite;
+  animation-name: bounce-2;
+  animation-timing-function: ease;
+  transform-origin:bottom;
+}
+
+@keyframes bounce-2 {
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-0.5vh); }
+  100% { transform: translateY(0); }
+}
+
+
 #survey-form{
-  padding: 2vw;
   background-color:rgb(51, 16, 45, 0.8);
   border-radius:10px;
   backdrop-filter:blur(5px);
   display:grid;
+  gap:1em;
+  grid-template-rows:repeat(auto-fit, 1fr);
+  padding:5vw;
 }
 
-#name-label{
-  font-size:2vw;
-}
+
+
 
