--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ span{
   width:50px;
   height:50px;
   border:#ffff 1px solid;
-  border-radius:100%;
+  border-radius:25px 25px;
   display:flex;
   justify-content:center;
   align-items:center;
@@ -78,7 +78,7 @@ svg{
   animation-iteration-count:infinite;
   animation-name: bounce-2;
   animation-timing-function: ease;
-  transform-origin:bottom;
+  transform-origin:bottom;  
 }
 
 @keyframes bounce-2 {
