--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 html{
   width:100%;
   height:100%;
+  scroll-behavior:smooth;
 }
 
 body{
@@ -63,28 +64,52 @@ body{
 }
 
 span{
-  width:50px;
-  height:50px;
-  border:#ffff 1px solid;
-  border-radius:25px 25px;
+  width:40px;
+  height:60px;
+  border:#ffff 2px solid;
+  border-radius:50px;
   display:flex;
-  justify-content:center;
+  flex-direction:column;
+  justify-content:flex-start;
   align-items:center;
+  cursor:pointer;
 }
 
-svg{
-  fill:#ffff;
-  animation-duration:2s;
-  animation-iteration-count:infinite;
-  animation-name: bounce-2;
-  animation-timing-function: ease;
-  transform-origin:bottom;  
+span::before, span::after{
+  content:'';
+  border-right: 2px solid #ffff;
+  border-bottom: 2px solid #ffff;
+  height:12px;
+  width:12px;
+  transform:rotate(45deg);
+  animation: scrolldown 1.5s ease-in-out infinite;
 }
 
-@keyframes bounce-2 {
-  0%   { transform: translateY(0); }
-  50%  { transform: translateY(-0.5vh); }
-  100% { transform: translateY(0); }
+span::after{
+  animation-delay:.1s;
+}
+
+@keyframes scrolldown{
+  0%{
+    opacity:0;
+  }
+
+  25%{
+    opacity:0.5;
+  }
+
+  50%{
+    opacity:1;
+  }
+
+  75%{
+    opacity:0.5;
+  }
+
+  100%{
+    opacity:0;
+    transform: translateY(20px) rotate(45deg);
+  }
 }
 
 
@@ -97,6 +122,7 @@ svg{
   grid-template-rows:repeat(auto-fit, 1fr);
   padding:5vw;
 }
+
 
 
 
