--- a/style.css
+++ b/style.css
@@ -1,129 +1,129 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap');
-
-
 * {
-  margin:0px;
-  padding:0px;
-  box-sizing:border-box;
-  font-family:'Inter';
-  color:#ffff;
-  font-size:16px;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+  color: #ffff;
+  font-size: 16px;
 }
 
-html{
-  width:100%;
-  height:100%;
-  scroll-behavior:smooth;
+html {
+  width: 100%;
+  height: 100%;
+  scroll-behavior: smooth;
 }
 
-body{
-  background-attachment:fixed;
-  background-image:url('https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/c1c7a7b6-f3e5-4f95-9ecf-6684140f8ec8/d9h59uo-644214f9-0c1b-441f-8b9e-c30661e9b507.png');
-  background-position:center;
-  background-repeat:no-repeat;
-  background-size:cover;
-  overflow:hidden;
+body {
+  background-attachment: fixed;
+  background-image: url('https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/c1c7a7b6-f3e5-4f95-9ecf-6684140f8ec8/d9h59uo-644214f9-0c1b-441f-8b9e-c30661e9b507.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
 }
 
-#section01{
-  height:100vh;
-  width:100vw;
-  max-width:100vw;
-  padding:5vh 10vw;
-  display:grid;
-  grid-template-rows:2fr 2fr 1fr;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
+#section01 {
+  height: 100vh;
+  width: 100vw;
+  max-width: 100vw;
+  padding: 5vh 10vw;
+  display: grid;
+  grid-template-rows: 2fr 2fr 1fr;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.30) 100%);
 }
 
-#title{
+#title {
   font-family: 'Amatic SC', sans-serif;
-  font-size:20vmin;
-  color:#33102D;
-  text-shadow:0.5vmin 0.5vmin #EEC3A5;
+  font-size: 20vmin;
+  color: #33102D;
+  text-shadow: 0.5vmin 0.5vmin #EEC3A5;
 }
 
 #description {
   font-family: 'Dosis', sans-serif;
-  color:#ffff;
-  font-size:5vmin;
-  text-shadow:#33102D 0.4vmin 0.4vmin;
-  font-weight:bold;
+  color: #ffff;
+  font-size: 5vmin;
+  text-shadow: #33102D 0.4vmin 0.4vmin;
+  font-weight: bold;
 }
 
-#anchor{
-  display:flex;
-  justify-content:center;
-  align-items:flex-end;
+#anchor {
+  width: 40px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  justify-self: center;
 }
 
-span{
-  width:40px;
-  height:60px;
-  border:#ffff 2px solid;
-  border-radius:50px;
-  display:flex;
-  flex-direction:column;
-  justify-content:flex-start;
-  align-items:center;
-  cursor:pointer;
+span {
+  width: 40px;
+  height: 60px;
+  border: #ffff 2px solid;
+  border-radius: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-span::before, span::after{
-  content:'';
+span::before, span::after {
+  content: '';
   border-right: 2px solid #ffff;
   border-bottom: 2px solid #ffff;
-  height:12px;
-  width:12px;
-  transform:rotate(45deg);
+  height: 12px;
+  width: 12px;
+  transform: rotate(45deg);
   animation: scrolldown 1.5s ease-in-out infinite;
 }
 
-span::after{
-  animation-delay:.1s;
+span::after {
+  animation-delay: .1s;
 }
 
-@keyframes scrolldown{
-  0%{
-    opacity:0;
+@keyframes scrolldown {
+  0% {
+    opacity: 0;
   }
-
-  25%{
-    opacity:0.5;
+  25% {
+    opacity: 0.5;
   }
-
-  50%{
-    opacity:1;
+  50% {
+    opacity: 1;
   }
-
-  75%{
-    opacity:0.5;
+  75% {
+    opacity: 0.5;
   }
-
-  100%{
-    opacity:0;
+  100% {
+    opacity: 0;
     transform: translateY(20px) rotate(45deg);
   }
 }
 
-
-#survey-form{
-  background-color:rgb(51, 16, 45, 0.8);
-  border-radius:10px;
-  backdrop-filter:blur(5px);
+#section02 {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  padding: 10vw;
   display:grid;
-  gap:1em;
-  grid-template-rows:repeat(auto-fit, 1fr);
-  padding:5vw;
 }
 
-
-
-
-
+#survey-form {
+  height: 100%;
+  width: 100%;
+  max-width:800px;
+  padding:15px;
+  border-radius: 10px;
+  background-color: rgb(51, 16, 45, 0.8);
+  backdrop-filter: blur(5px);
+  display: grid;
+  grid-template-rows: repeat(auto-fit, 1fr);
+  align-items:center;
+  justify-self:center;
+}
