--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.30) 100%);
 }
 
 #title {
@@ -107,23 +106,60 @@ span::after {
 }
 
 #section02 {
-  height: 100vh;
   width: 100vw;
+  height: 100vh;
   overflow: hidden;
-  padding: 10vw;
-  display:grid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
 }
 
 #survey-form {
   height: 100%;
+  max-width: 800px;
   width: 100%;
-  max-width:800px;
-  padding:15px;
+  gap: 1vh;
+  padding: 30px;
   border-radius: 10px;
   background-color: rgb(51, 16, 45, 0.8);
   backdrop-filter: blur(5px);
   display: grid;
   grid-template-rows: repeat(auto-fit, 1fr);
-  align-items:center;
-  justify-self:center;
+  align-items: center;
+}
+
+input, option {
+  color: black;
+  border: 1px solid white;
+  border-radius: 3px;
+  padding: 1px;
+}
+
+label {
+  font-weight: 500;
+  text-shadow: 1px 1px black;
+}
+
+#dropdown {
+  color: black;
+}
+
+textarea{
+  color:black;
+}
+#submit {
+  background: linear-gradient(to bottom, #e6d030 5%, #ffab23 100%);
+  background-color: #ffec64;
+  border-radius: 6px;
+  border: 1px solid #ffaa22;
+  display: inline-block;
+  cursor: pointer;
+  color: black;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ffee66;
 }
