--- a/style.css
+++ b/style.css
@@ -113,14 +113,16 @@ span::after {
   align-items: center;
   justify-content: center;
   padding: 10px;
+  overflow: auto;
 }
 
 #survey-form {
   height: 100%;
-  max-width: 800px;
   width: 100%;
+  max-width: 600px;
+  max-height: 700px;
   gap: 1vh;
-  padding: 30px;
+  padding: 20px;
   border-radius: 10px;
   background-color: rgb(51, 16, 45, 0.8);
   backdrop-filter: blur(5px);
@@ -145,9 +147,15 @@ label {
   color: black;
 }
 
-textarea{
-  color:black;
+#texta {
+  text-align: center;
+  font-weight: bold;
 }
+
+textarea {
+  color: black;
+}
+
 #submit {
   background: linear-gradient(to bottom, #e6d030 5%, #ffab23 100%);
   background-color: #ffec64;
@@ -162,4 +170,24 @@ textarea{
   padding: 6px 24px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #ffee66;
+}
+
+iframe {
+  display: none;
+}
+
+@media screen and (min-width:800px) {
+  #section02 {
+    justify-content: space-evenly;
+  }
+  iframe {
+    max-height: 600px;
+    display: inline-flex;
+    padding: 10px;
+    background-color: #33102D;
+    border-radius: 10px;
+    background-color: rgb(51, 16, 45, 0.8);
+    max-width: 800px;
+    margin: 10px;
+  }
 }
