--- a/style.css
+++ b/style.css
@@ -172,22 +172,11 @@ textarea {
   text-shadow: 0px 1px 0px #ffee66;
 }
 
-iframe {
-  display: none;
-}
-
 @media screen and (min-width:800px) {
+  
   #section02 {
-    justify-content: space-evenly;
-  }
-  iframe {
-    max-height: 600px;
-    display: inline-flex;
-    padding: 10px;
-    background-color: #33102D;
-    border-radius: 10px;
-    background-color: rgb(51, 16, 45, 0.8);
-    max-width: 800px;
-    margin: 10px;
+    display:grid;
+    grid-template-columns:2fr 1fr;
+    
   }
 }
